<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/friendsbg"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context="dawson.dawsondangerousclub.WhoIsFreeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/startTimeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/my_button_style"
                android:onClick="onClickStartTime"
                android:text="@string/set_start_time" />


            <TextView
                android:id="@+id/endTimeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/my_button_style"
                android:onClick="onClickEndTime"
                android:text="@string/set_end_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <Spinner
                android:id="@+id/daySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getBreakFriends"
                android:text="@string/forecast_search" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="30dp">


        <ListView
            android:id="@+id/friendLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>

</LinearLayout>
